<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_robot_remote</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="adithyaprakash12@gmail.com">Adithya_damarla</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp_action</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>arm_robot_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
